--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/ggjme/p513u" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/ggjme/v11e" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/ggjme/k12o" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/ggjme/q8z" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/ggjme/o4d" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/ggjme/t12v" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/ggjme/s3k" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/ggjme/s10l" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/ggjme/c9o" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/ggjme/s7m" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/ggjme/v5j" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/irvkts/l513m" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/irvkts/a11i" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/irvkts/u12w" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/irvkts/q8s" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/irvkts/d4z" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/irvkts/b12e" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/irvkts/b3k" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/irvkts/m10g" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/irvkts/d9q" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/irvkts/e7n" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/irvkts/w5y" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245147.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-75960147-FBI-600x400-320x200.jpg"><p align="center">华裔知名学者隐瞒千人计划 回国途中被捕</p></a>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245147.md#1" title="华裔知名学者隐瞒千人计划 回国途中被捕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-75960147-FBI-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244653.md#1" title="美国制裁新疆公安厅和四名高官 冻结财产""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1052866522-600x400-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12242848.md#1" title="沈舟：FBI局长揭示中共的全面冷战渗透""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/a3-1@1200x1200-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243056.md#1" title="湖北江西现河堤溃口 千岛湖泄洪量达76西湖""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/2-11-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ttfgmz3323.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245248.md#1">【美股瞭望】拜登选情引起资本市场疑虑</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244997.md#1">什么叫真爱国：陌生军人叠好受损国旗</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245131.md#1">【新闻看点】川普连出重手 习近平再设安全组？</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245183.md#1">美国务院：北京应与美方就军备控制问题会谈</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245029.md#1">【役情最前线】驻港国安公署成防疫漏洞？</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245147.md#1">华裔知名学者隐瞒千人计划 回国途中被捕</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245131.md#1">【新闻看点】川普连出重手 习近平再设安全组？</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245248.md#1">【美股瞭望】拜登选情引起资本市场疑虑</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244997.md#1">什么叫真爱国：陌生军人叠好受损国旗</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245183.md#1">美国务院：北京应与美方就军备控制问题会谈</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245029.md#1">【役情最前线】驻港国安公署成防疫漏洞？</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245147.md#1">华裔知名学者隐瞒千人计划 回国途中被捕</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240842.md#1">上海暴雨“中国第一高楼”多层楼漏水严重</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241667.md#1">贵州公交司机疑报复社会 中共禁媒体报导真相</a><br>
@@ -42,23 +42,22 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,587,128 人
+!共 359,588,525 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244813.md#1">中共外长发求和信号？美国制裁中共4高官</a><br>
-<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243659.md#1">内斗清洗不断 中共政法委再次“清理门户”</a><br>
-<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244716.md#1">李克强贵州考察时 多人高喊“就业难”</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243557.md#1">陈思敏：公安系统3人同日落马 赵乐际要当心</a><br>
+<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243659.md#1">内斗清洗不断 中共政法委再次“清理门户”</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244528.md#1">美国务院禁陈全国等三名高官及家人进入美国</a><br>
+<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244716.md#1">李克强贵州考察时 多人高喊“就业难”</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241166.md#1">【内幕】文件泄中共防疫 严控国民回国</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242681.md#1">【新闻看点】A股飙升内幕 金融战下的布局？</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12240040.md#1">中共强推港版国安法 触发中国人退党</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244263.md#1">中共前官员提做六大准备 学者：绝望准备后事</a><br>
+<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245131.md#1">【新闻看点】川普连出重手 习近平再设安全组？</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244796.md#1">抄袭成瘾 大陆山寨版劳斯莱斯横行街头</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242684.md#1">王友群：中共正处在最后解体的前夜</a><br>
-<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245147.md#1">华裔知名学者隐瞒千人计划 回国途中被捕</a><br>
-<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245131.md#1">【新闻看点】川普连出重手 习近平再设安全组？</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245029.md#1">【役情最前线】驻港国安公署成防疫漏洞？</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244617.md#1">为何拒上真人秀？霍建华与林志颖互动有趣</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244501.md#1">【重播】川普签署《拉美裔繁荣倡议》行政令</a><br>
