--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -9,12 +9,12 @@
 	<p>【大纪元2020年10月18日讯】（大纪元记者夏雨、戴芙若、林南、颜殊璟、萧律生综合报导）10月18日全球<ahref="https://github.com/xsksmt389/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/xsksmt389/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/xsksmt389/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101812">纽约滑雪场下月起可以室内50％容量开放</a></strong><br />
+<p><strong><ahref="#_Toc2020101813">WHO：欧洲某些地区的重症监护病房近满员</a></strong><br />
+<strong><ahref="#_Toc2020101812">纽约滑雪场下月起可以室内50％容量开放</a></strong><br />
 <strong><ahref="#_Toc2020101811">瑞士宣布全国口罩令</a></strong><br />
 <strong><ahref="#_Toc2020101810">教皇方济各住所的居民测试呈阳性</a></strong><br />
 <strong><ahref="#_Toc2020101809">德国总统进行自我隔离</a></strong><br />
 <strong><ahref="#_Toc2020101808">全球单日新病例首超40万 欧洲病例激增</a></strong><br />
-<strong><ahref="#_Toc2020101807">美国大草原州病例增幅大</a></strong><br />
 <strong><ahref="#_Toc2020101806">中共疫苗研发弯道超车 专家忧灾难性后果</a></strong><br />
 <strong><ahref="#_Toc2020101805">蓬佩奥：中共已经为瞒疫付出沉重代价</a></strong></p>
 <p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月17日下午1时，全球确诊感染<ahref="https://github.com/xsksmt389/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/xsksmt389/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数接近3,900万，死亡人数超过110万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
@@ -24,6 +24,12 @@
 <p>美国总统川普（特朗普）再次表示，中共向世界释放病毒，美国将追责，让中共为美国的刺激法案资金买单。美国国务卿蓬佩奥也表示，中共已经为瞒疫付出沉重代价。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/xsksmt389/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<p><a name="_Toc2020101813"></a></p>
+<h3>WHO：欧洲某些地区的重症监护病房近满员</h3>
+<p>世界卫生组织说，欧洲的中共病毒爆发是“令人担忧的”，因为病例激增，某些地区的重症监护病房（ICU）床位已接近饱和。</p>
+<p>世卫组织技术负责人玛丽亚·范·科霍夫（Maria Van Kerkhove）在一次新闻发布会上说，国际机构正在从欧洲许多城市中获悉，他们的ICU病床将在未来几周内完全饱和。她补充说：“在我们接近流感季节时，这令人担忧。”</p>
+<p>在进行人口调整后，欧洲新的中共病毒感染数量现已超过美国。欧洲报告7天内平均1百万人口中有187例新的Covid-19病例，而美国为162例新的Covid-19病例。</p>
+<p>科霍夫敦促人们定期洗手，戴口罩，与他人保持距离并避免去人多的地方。</p>
 <h3>美众议长：对选举前达成协议感到乐观</h3>
 <p>针对最新刺激协议的谈判，众议院议长南希·佩洛西（Nancy Pelosi）周日在致民主党同事的一封信中说：“尽管有一些令人鼓舞的消息，但仍有很多工作要做。”</p>
 <p>周日早些时候，她表示需要在48小时内与政府达成协议，才能在选举日之前通过法案。她的办公室说时间表将在星期二晚上结束。</p>
@@ -64,8 +70,8 @@
 <p>在第4级之下，只有基本零售才能开放。在5级以下，人们将被要求留在家中，餐馆只能提供外卖和送货服务。</p>
 <h3>英国记录逾16,000例新病例</h3>
 <p>英国周日又录得16,982人感染，较周六增加811人。</p>
-<p>但是，根据政府数据，过去24小时内死亡人数减少到67人。</p>
-<p><a name="_Toc2020101811"></a></p>
+<p>但是，根据政府数据，过去24小时内死亡人数减少到67人。<br />
+<a name="_Toc2020101811"></a></p>
 <h3>瑞士宣布全国口罩令</h3>
 <p>为遏制Covid-19扩散，瑞士周日宣布了一系列包括口罩令的措施，将于周一生效。</p>
 <p>根据政府的声明，瑞士联邦委员会采取了一些全国性的措施??，例如要求在公共场所可进入的室内区域戴口罩。</p>
@@ -257,16 +263,16 @@
 
 
 <strong>相关新闻：</strong>
+<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12485003.md#1">伊朗称联合国武器禁运到期 蓬佩奥强烈回应</a></li>
 <li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484874.md#1">亚美尼亚和阿塞拜疆互指对方违反新停火协议</a></li>
 <li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484808.md#1">哈萨克斯坦爆亨特?拜登丑闻 涉及克里女儿</a></li>
 <li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484560.md#1">以色列和阿联酋加强合作 达成投资双边协议</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482885.md#1">稀有巨钻“玫瑰花魂”拍卖 估3800万美元</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">文革中自杀的几个名人（3）红岩作者罗广斌</a></li><li><a href="https://github.com/xsksmt389/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/5/n4520825.md#1" target="_blank">石铭：从爆破专家被酷刑致死看江氏集团的惨无人道</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405198.md#1" target="_blank">蔡霞：文革是一场每个人命运的浩劫</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340563.md#1" target="_blank">美国务卿：对严重侵犯宗教自由者追责</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
