--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -272,7 +272,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405198.md#1" target="_blank">蔡霞：文革是一场每个人命运的浩劫</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340563.md#1" target="_blank">美国务卿：对严重侵犯宗教自由者追责</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/23/n10165368.md#1" target="_blank">赵刚：穿制服的思想</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/31/n10103847.md#1" target="_blank">老伴绝处逢生 八旬警察举杯感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
