--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -9,8 +9,8 @@
 	<p>【大纪元2020年10月18日讯】（大纪元记者夏雨、戴芙若、林南、颜殊璟、萧律生综合报导）10月18日全球<ahref="https://github.com/xsksmt389/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/xsksmt389/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/xsksmt389/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101813">WHO：欧洲某些地区的重症监护病房近满员</a></strong><br />
-<strong><ahref="#_Toc2020101812">纽约滑雪场下月起可以室内50％容量开放</a></strong><br />
+<p><strong><ahref="#_Toc2020101814">推特删白宫顾问“口罩无用论”推文/a></strong><br />
+<strong><ahref="#_Toc2020101813">WHO：欧洲某些地区的重症监护病房近满员</a></strong><br />
 <strong><ahref="#_Toc2020101811">瑞士宣布全国口罩令</a></strong><br />
 <strong><ahref="#_Toc2020101810">教皇方济各住所的居民测试呈阳性</a></strong><br />
 <strong><ahref="#_Toc2020101809">德国总统进行自我隔离</a></strong><br />
@@ -24,6 +24,12 @@
 <p>美国总统川普（特朗普）再次表示，中共向世界释放病毒，美国将追责，让中共为美国的刺激法案资金买单。美国国务卿蓬佩奥也表示，中共已经为瞒疫付出沉重代价。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/xsksmt389/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<p><a name="_Toc2020101814"></a></p>
+<h3>推特删白宫顾问“口罩无用论”推文</h3>
+<p>推特（Twitter）从白宫中共病毒高级顾问斯科特·阿特拉斯博士（Dr. Scott Atlas）那里删除了一条推文，该推文质疑口罩在对抗COVID-19方面的有效性。</p>
+<p>阿特拉斯在推文中写道：“口罩是否有效？否”，在其他几篇之前，有人质疑使用口罩防止中共病毒扩散。阿特拉斯还举了一些例子，他曾说过“即使强制戴口罩，案例也爆发了”，包括洛杉矶，迈阿密，夏威夷，阿拉巴马州，法国，菲律宾，英国，西班牙和以色列。</p>
+<p>Twitter在给《国会山报》的一份声明中说，该医生的推文“违反了我们的COVID-19误导性信息政策”，“禁止共享与COVID-19相关的虚假或误导性内容，否则可能会造成伤害。”</p>
+<p>白宫中共病毒顾问在删除推文后回击Twitter，说：“这意味着正确的政策是@realDonaldTrump准则：将口罩用于其预定目的——当与其他人接近时，尤其是在高风险中，否则保持社交距离。没有广泛的授权。“常识”，阿特拉斯写道。</p>
 <p><a name="_Toc2020101813"></a></p>
 <h3>WHO：欧洲某些地区的重症监护病房近满员</h3>
 <p>世界卫生组织说，欧洲的中共病毒爆发是“令人担忧的”，因为病例激增，某些地区的重症监护病房（ICU）床位已接近饱和。</p>
@@ -55,7 +61,7 @@
 <p>州长安德鲁·库默（Andrew Cuomo）周日表示，自11月6日起，纽约州的滑雪场将允许以室内50％的容量开放。</p>
 <p>以下是滑雪场重新开放的限制：</p>
 <p>除进食、饮水或滑雪外，任何时候都需要戴口罩。<br />
-保持社会疏离。<br />
+保持社交距离。<br />
 滑雪吊船和缆车必须仅限于同一团体的成员。<br />
 滑雪课程最多可容纳10人。<br />
 共用的租赁设备必须彻底清洁和消毒。<br />
@@ -272,7 +278,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/25/n11000879.md#1" target="_blank">共产暴政录：文革中究竟死了多少人</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9970937.md#1" target="_blank">严家伟：访“共产主义接班人”的集体大坟场</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/17/n4664320.md#1" target="_blank">她在电话那头喊：感谢法轮功师父救了我！</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
