--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -15,8 +15,8 @@
 
 中共肺炎全球疫情及美国疫情大数据请点击这里。
 要点：
+推特删白宫顾问“口罩无用论”推文/a>
 WHO：欧洲某些地区的重症监护病房近满员
-纽约滑雪场下月起可以室内50％容量开放
 瑞士宣布全国口罩令
 教皇方济各住所的居民测试呈阳性
 德国总统进行自我隔离
