--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,23 +13,23 @@
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484237.md#1" title="大陆3季度粮价上涨 玉米每吨价格创4年新高""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/06/1906082300411528-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484118.md#1" title="中共大使威胁在港30万加人安全 激怒加拿大人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/Screen-Shot-2020-10-18-at-6.10.55-pm-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xsksmt389.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/29/n12439663.md#1">提早发育会长不高吗？孩子性早熟有4个原因</a><br>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12485086.md#1">朱利安尼：拜登儿子抱怨 钱财与老爹分半</a><br>
-:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484970.md#1">剑指中国产品 印度警告两大电商违反规定</a><br>
-:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484951.md#1">【直播】川普内华达州演讲 民众提前八小时排队</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/29/n12439663.md#1">提早发育会长不高吗？孩子性早熟有4个原因</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12485086.md#1">朱利安尼：拜登儿子抱怨 钱财与老爹分半</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484970.md#1">剑指中国产品 印度警告两大电商违反规定</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484951.md#1">【直播】川普内华达州演讲 民众提前八小时排队</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12485003.md#1">伊朗称联合国武器禁运到期 蓬佩奥强烈回应</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a><br>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a><br>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482198.md#1">【翻墙必看】习近平突然返京的原因</a><br>
-<a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481752.md#1">北京允许摆摊 但不称“地摊经济” 惹议</a><br>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481940.md#1">恐吓台湾 央视“移花接木”抛出5年前军演</a><br>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
-<a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482472.md#1">【拍案惊奇】拜登家族通共？习为何突然回京</a><br>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12483050.md#1">丑闻再发酵 传拜登是电邮所指的“大人物”</a><br>
+<a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482472.md#1">【拍案惊奇】拜登家族通共？习为何突然回京</a><br>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12483265.md#1">中共高调反美 京沪托福考位名额5分钟抢光</a><br>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482193.md#1">前生意伙伴举报亨特 游说拜登白宫见中企官员</a><br>
+<a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482279.md#1">内斗激烈 中共能源局副局长落马</a><br>
 <br><p align="center"><a href="https://github.com/xsksmt389/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/14/n12474852.md#1">【内幕】吉林省应对美中贸易战措施曝光</a><br>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/21/n12420009.md#1">【思想领袖】史密斯：关乎美国未来的战斗</a><br>
