--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -282,16 +282,16 @@
 
 
 <strong>相关新闻：</strong>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484974.md#1">抗共大事记：中共挑衅西方 加国罕见狠批北京 (10/12-10/18)</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482137.md#1">【最新疫情10.19】美南部州经济复苏快</a></li>
 <li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485003.md#1">伊朗称联合国武器禁运到期 蓬佩奥强烈回应</a></li>
 <li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484874.md#1">亚美尼亚和阿塞拜疆互指对方违反新停火协议</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484808.md#1">哈萨克斯坦爆亨特?拜登丑闻 涉及克里女儿</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484560.md#1">以色列和阿联酋加强合作 达成投资双边协议</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9970937.md#1" target="_blank">严家伟：访“共产主义接班人”的集体大坟场</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/9/n10841367.md#1" target="_blank">一群百岁老人绝处逢生的故事</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/25/n11070799.md#1" target="_blank">林辉：因如此荒诞理由 他们成为了“右派”</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
