--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,10 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>印度新增55,722例确诊</h3>
+<p>据印度卫生部周一报告数据，在过去24小时内，印度增加了55,722例感染中共病毒的病例，令总的感染人数升至755万人。</p>
+<p>不过，印度周一录得近四个月来的最低死亡人数，在过去24小时内报告的死亡人数为579人，使全国总的死亡人数达到114,610 人。</p>
+<p>这个世界上人口第二多的国家也是世界上感染Covid-19 的人数第二多的国家，仅次于美国，美国的感染人数约为800多万。</p>
 <p><a name="_Toc2020101909"></a></p>
 <h3>川普：不会忘记病毒来自中国</h3>
 <p>周六（10月17日），美国总统川普参加了密西根州和威斯康星州的竞选集会，再次提到不会忘记病毒来自中国。</p>
@@ -132,7 +136,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498992.md#1" target="_blank">裴毅然：再说“四?一二”</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
+<li><a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/20/2/20/n11884306.md#1">退出无神论组织 做个神佛保佑的人</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/9/n11780113.md#1" target="_blank">德国修炼者读《转法轮》见证神奇 受益良多</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
