--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,15 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>莱德斯罗杯橄榄球赛 超过4.6万名新西兰球迷入场观赛</h3>
+<p>在周日橄榄球布莱德斯罗杯（Bledisloe Cup）的第二场比赛中，新西兰队以27比7击败澳大利亚队。这场比赛的伊甸园球场出现了近乎满员的46,049名观众，这在2020年中是个不寻常的景象。</p>
+<p>上周日的第一场比赛在新西兰惠灵顿的天空体育场进行，吸引了31,000名球迷，澳大利亚队以16比16的比分战平新西兰队。</p>
+<p>布莱德斯罗杯的第三和第四场比赛将于10月31日在澳大利亚悉尼和11月7日在墨尔本举行，这将是一场只有新西兰队和澳大利亚队之间的比赛。</p>
+<p>此前，新西兰橄榄球协会预计本周日第二届布莱德洛伊杯对阵澳大利亚队的比赛将吸引47000名观众入场。比赛前已经有4万张门票被抢购一空。</p>
+<p>奥克兰的Covid-19限制措施在8月小范围爆发中共病毒病例后重新进入封锁状态，在本月初被解除，允许人群返回体育场。</p>
+<p>伊甸园公园（Eden Park）是世界上为数不多的运动场之一，在周末举办了一场近乎满员赛事。</p>
+<p>新西兰全黑队自2003年以来一直保持着这项赛事冠军。</p>
+<figure id="attachment_11378142" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/07/20190711-Chi-Jin-State-of-Origin-04.jpg"><img src="https://i.epochtimes.com/assets/uploads/2019/07/20190711-Chi-Jin-State-of-Origin-04-600x400.jpg" alt="澳洲橄榄球洲际赛 新州击败昆州卫冕成功" width="600" b="400" class="size-large wp-image-11378142" /></a><figcaption class="wp-caption-text">澳洲橄榄球赛洲际赛——State of Origin。图为比赛瞬间。（安平雅／大纪元）</figcaption></figure>
 <h3>国泰航空今年前9个月载客量同比下降83%</h3>
 <p>总部位于香港的国泰航空周一发布公告，2020年前9个月，搭乘国泰航空的乘客数量较去年同期下降了83.2%。</p>
 <p>国泰航空的首席客户和商务官罗纳德·林（Ronald Lam）表示，他预计国泰航空在2020年余下的时间里，将以大流行病之前的客运航班运力的10%左右运营，明年全年的运力将低于50%。</p>
@@ -155,7 +164,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/10/n10902151.md#1" target="_blank">龙延：中共道路是魔鬼的选择</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11400032.md#1" target="_blank">澳立法会议员：公开直接制止中共迫害法轮功</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10747311.md#1" target="_blank">裴毅然：中共抗战“游而不击”的史证（一）</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
